# nokia-tasks

./: CMakeLists.txt  README.md  nokia-tasks.code-workspace
task1-first-n-primes/: CMakeLists.txt
task1-first-n-primes/include/: first-n-primes.hpp
task1-first-n-primes/src/: first-n-primes.cpp
task2-words-counter/: CMakeLists.txt
task2-words-counter/include/: words-counter.hpp
task2-words-counter/src/: words-counter.cpp
task3-list-pick-out/: CMakeLists.txt
task3-list-pick-out/include/: list-pick-out.hpp
task3-list-pick-out/src/: list-pick-out.cpp
task4-bitwise-permutation/: CMakeLists.txt
task4-bitwise-permutation/include/: bitwise-permutation.hpp
task4-bitwise-permutation/src/: bitwise-permutation.cpp
task5-tree-paths/: CMakeLists.txt
task5-tree-paths/include/: tree-paths.hpp
task5-tree-paths/src/: tree-paths.cpp
tests/: CMakeLists.txt  task1-first-n-primes.cpp  task2-words-counter.cpp  task3-list-pick-out.cpp  task4-bitwise-permutation.cpp  task5-tree-paths.cpp
